Update to index page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
       <h1 class="logo">
         <a href="index.html">
-            <img src="assets/img/apple-touch-icon.PNG" class="img-fluid rounded-4 mb-4" alt="" style="width: 40px; height: 45px;">
+            <!-- <img src="assets/img/apple-touch-icon.PNG" class="img-fluid rounded-4 mb-4" alt="" style="width: 40px; height: 45px;"> -->
+            <h5>iConnect-Distro</h5>
         </a>
       </h1>     <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -60,9 +61,11 @@
           <li class="dropdown"><a href="#"><span>Choose Your iPhone</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">iPhone 8</a></li>
-              <li><a href="#">iPhone 9</a></li>
               <li><a href="#">iPhone 10</a></li>
               <li><a href="#">iPhone 11</a></li>
+              <li><a href="#">iPhone 12</a></li>
+              <li><a href="#">iPhone 13</a></li>
+              <li><a href="#">iPhone 14</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -247,8 +250,8 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Nelson Mandela</h3>
-                <h4>President &amp; 1</h4>
+                <h3>Client 1</h3>
+                <h4>Bought iphone11 &amp; 1</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Fast and reliable iPhone distribution service that exceeded my expectations!
@@ -260,11 +263,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Thabo Mbeki</h3>
-                <h4>President2</h4>
+                <h3>Client 2</h3>
+                <h4>Bought iphone8</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure essFe labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Fast and reliable iPhone distribution service that exceeded my expectations!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -273,11 +276,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jacob Zuma</h3>
-                <h4>President3</h4>
+                <h3>Client 4</h3>
+                <h4>Bought iphone14</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  Fast and reliable iPhone distribution service that exceeded my expectations!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -286,11 +289,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Cyril Rmamaphoza</h3>
-                <h4>Freelancer</h4>
+                <h3>Client 4</h3>
+                <h4>Bought iphone13</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  Fast and reliable iPhone distribution service that exceeded my expectations!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -299,11 +302,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>Robert Mu Larson</h3>
-                <h4>President1</h4>
+                <h3>Client 5</h3>
+                <h4>Bought iphone14</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Fast and reliable iPhone distribution service that exceeded my expectations!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -333,7 +336,7 @@
               <li data-filter=".filter-app">iPhone 8 and Lower Versions</li>
               <li data-filter=".filter-card">iPhone 10 and Lower Versions</li>
               <li data-filter=".filter-web">iPhone 12 and Lower Versions</li>
-              <li data-filter=".filter-web">iPhone 13 and iPhone 14</li>
+              <li data-filter=".filter-latest">iPhone 13 and iPhone 14</li>
             </ul>
           </div>
         </div>
@@ -367,7 +370,7 @@
             </div>
           </div><!-- End Portfolio Item -->
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-product">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone7 Plus.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone7 Plus.PNG" class="img-fluid" alt=""></a>
@@ -381,7 +384,7 @@
           </div>
 
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-product">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-card">
             
             <div class="portfolio-wrap">
               <center>
@@ -395,7 +398,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-product">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone12.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone12.PNG" class="img-fluid" alt=""></a>
@@ -408,7 +411,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-product">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone14.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone14.PNG" class="img-fluid" alt=""></a>
@@ -422,7 +425,7 @@
           </div>
 
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-product">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone8.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone8.PNG" class="img-fluid" alt=""></a>
@@ -435,7 +438,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-product">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone12.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone14.PNG" class="img-fluid" alt=""></a>
@@ -448,7 +451,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-product">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone13.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone14.PNG" class="img-fluid" alt=""></a>
@@ -462,7 +465,7 @@
           </div>
 
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-product">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-latest">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone12.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone8.PNG" class="img-fluid" alt=""></a>
@@ -475,7 +478,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-product">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-latest">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone14.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone14.PNG" class="img-fluid" alt=""></a>
