--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
     <section id="about-boxes" class="about-boxes">
       <div class="container" data-aos="fade-up">
 
-        <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+        <center>
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
               <img src="assets/img/mission.jpg" class="card-img-top" alt="...">
               <div class="card-icon">
@@ -186,7 +186,7 @@
                   seamless distribution experience. </p>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
               <img src="assets/img/about-boxes-2.jpg" class="card-img-top" alt="...">
@@ -201,7 +201,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <img src="assets/img/vision.jpg" class="card-img-top" alt="...">
               <div class="card-icon">
@@ -215,8 +215,8 @@
                     to create a seamless distribution experience. </p>
               </div>
             </div>
-          </div>
-        </div>
+          </div> -->
+        </center>
 
       </div>
     </section><!-- End About Boxes Section -->
