--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Products</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Choose Your iPhone</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">iPhone 8</a></li>
-              <li><a href="#">iPhone 10</a></li>
-              <li><a href="#">iPhone 11</a></li>
-              <li><a href="#">iPhone 12</a></li>
-              <li><a href="#">iPhone 13</a></li>
-              <li><a href="#">iPhone 14</a></li>
+              <li><a href="#portfolio">iPhone 6</a></li>
+              <li><a href="#portfolio">iPhone 7</a></li>
+              <li><a href="#portfolio">iPhone 8</a></li>
+              <li><a href="#portfolio">iPhone X</a></li>
+              <li><a href="#portfolio">iPhone 11</a></li>
+              <li><a href="#portfolio">iPhone 12</a></li>
+              <li><a href="#portfolio">iPhone 13</a></li>
+              <li><a href="#portfolio">iPhone 14</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
