--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-app">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphoneX.PNG" data-gallery="portfolio-gallery-app" class="glightbox" title="iPhone X 64GB for R5600"><img src="assets/img/portfolio/iphoneX.PNG" class="img-fluid" alt=""></a>
@@ -466,7 +466,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-app">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphoneX.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphoneX.PNG" class="img-fluid" alt=""></a>
@@ -480,7 +480,7 @@
           </div>
 
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-card">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
             
             <div class="portfolio-wrap">
               <center>
@@ -494,7 +494,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-app">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
             <center>
               <a href="assets/img/portfolio/iphone11.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone11.PNG" class="img-fluid" alt=""></a>
@@ -507,7 +507,7 @@
           </div>
         </div>
 
-        <div class="col-xl-4 col-md-6 portfolio-item filter-app">
+        <div class="col-xl-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
           <center>
             <a href="assets/img/portfolio/iphone11 Pro.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone11 Pro.PNG" class="img-fluid" alt=""></a>
@@ -520,7 +520,7 @@
         </div>
       </div>
 
-      <div class="col-xl-4 col-md-6 portfolio-item filter-app">
+      <div class="col-xl-4 col-md-6 portfolio-item filter-web">
         <div class="portfolio-wrap">
         <center>
           <a href="assets/img/portfolio/iphone11 Pro.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone11 Pro.PNG" class="img-fluid" alt=""></a>
@@ -533,7 +533,7 @@
       </div>
     </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-card">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone12.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone12.PNG" class="img-fluid" alt=""></a>
@@ -546,7 +546,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-card">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone12.PNG" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/iphone12.PNG" class="img-fluid" alt=""></a>
@@ -559,7 +559,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-latest">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone13.PNG" data-gallery="portfolio-gallery-app" class="glightbox" title="iPhone 13 128GB for R11800"><img src="assets/img/portfolio/iphone13.PNG" class="img-fluid" alt=""></a>
@@ -572,7 +572,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-latest">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone13 pro.PNG" data-gallery="portfolio-gallery-app" class="glightbox" title="iPhone 13 Pro for R15000"><img src="assets/img/portfolio/iphone13 pro.PNG" class="img-fluid" alt=""></a>
@@ -585,7 +585,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-latest">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone13 pro.PNG" data-gallery="portfolio-gallery-app" class="glightbox" title="iPhone 13 Pro Max for R16800"><img src="assets/img/portfolio/iphone13 pro.PNG" class="img-fluid" alt=""></a>
@@ -599,7 +599,7 @@
           </div>
 
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-latest">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone14.PNG" data-gallery="portfolio-gallery-app" class="glightbox" title="iPhone 14 Plus 128GB for R15200"><img src="assets/img/portfolio/iphone14.PNG" class="img-fluid" alt=""></a>
@@ -612,7 +612,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-latest">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone14 pro.png" data-gallery="portfolio-gallery-app" class="glightbox" title="iPhone 14 Pro for R19000"><img src="assets/img/portfolio/iphone14 pro.PNG" class="img-fluid" alt=""></a>
@@ -625,7 +625,7 @@
             </div>
           </div>
 
-          <div class="col-xl-4 col-md-6 portfolio-item filter-web">
+          <div class="col-xl-4 col-md-6 portfolio-item filter-latest">
             <div class="portfolio-wrap">
               <center>
                 <a href="assets/img/portfolio/iphone14 pro.PNG" data-gallery="portfolio-gallery-app" class="glightbox" title="iPhone 14 Pro Max for R24000"><img src="assets/img/portfolio/iphone14 pro.PNG" class="img-fluid" alt=""></a>
