--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <h1>We Connect you to best</h1>
       <h2>We are a Second Hand  Iphone Store</h2>
       <div class="d-flex">
-        <a href="#about" class="btn-get-started scrollto">Check Our Products</a>
+        <a href="#portfolio" class="btn-get-started scrollto">Check Our Products</a>
         <a href="https://www.youtube.com/watch?v=FT3ODSg1GFE" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
       </div>
     </div>
