--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <div class="portfolio-wrap">
               <center>
 
-                <a href="assets/img/portfolio/iphone6s.PNG" data-gallery="portfolio-gallery-app" class="glightbox" title="iPhone 6S for R2700"><img src="assets/img/portfolio/iphone6s.PNG" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/iphone6s.png" data-gallery="portfolio-gallery-app" class="glightbox" title="iPhone 6S for R2700"><img src="assets/img/portfolio/iphone6s.PNG" class="img-fluid" alt=""></a>
               </center>
               
               <div class="portfolio-info">
@@ -361,7 +361,7 @@
           <div class="col-xl-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <center>
-                <a href="assets/img/portfolio/iphone6s Plus.PNG" data-gallery="portfolio-gallery-app" class="glightbox .img-center" title="iPhone 6S Plus for R3650"><img src="assets/img/portfolio/iphone6s Plus.PNG" class="img-fluid .img-center" alt=""></a>
+                <a href="assets/img/portfolio/iphone6s Plus.png" data-gallery="portfolio-gallery-app" class="glightbox .img-center" title="iPhone 6S Plus for R3650"><img src="assets/img/portfolio/iphone6s Plus.PNG" class="img-fluid .img-center" alt=""></a>
               </center>
               
               <div class="portfolio-info">
