--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">iPhone 8 and Lower Versions</li>
-              <li data-filter=".filter-card">iPhone 10 and Lower Versions</li>
+              <li data-filter=".filter-card">iPhone XR and Lower Versions</li>
               <li data-filter=".filter-web">iPhone 12 and Lower Versions</li>
               <li data-filter=".filter-latest">iPhone 13 and iPhone 14</li>
             </ul>
