Added customer reviews

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
 
       </div>
-    </section>End Clients Section
+    </section>
 
 
     <!-- ======= Testimonials Section ======= -->
@@ -250,12 +250,12 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Client 1</h3>
-                <h4>Bought iphone11 &amp; 1</h4>
+                <img src="assets/img/testimonials/testimonials-1.jpeg" class="testimonial-img" alt="">
+                <h3>Lorna</h3>
+                <h4>Bought an iPhone 13 Pro Max</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fast and reliable iPhone distribution service that exceeded my expectations!
+                    Best value for money, the purchase and delivery were simple
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -263,12 +263,12 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Client 2</h3>
-                <h4>Bought iphone8</h4>
+                <img src="assets/img/testimonials/testimonials-2.jpeg" class="testimonial-img" alt="">
+                <h3>Matsi</h3>
+                <h4>Bought an iPhone 12</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fast and reliable iPhone distribution service that exceeded my expectations!
+                    Bought my iPhone 12 a month ago, camera quality is great and battery life even better
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -276,12 +276,12 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Client 4</h3>
-                <h4>Bought iphone14</h4>
+                <img src="assets/img/testimonials/testimonials-4.jpeg" class="testimonial-img" alt="">
+                <h3>Lwando</h3>
+                <h4>Bought an iPhone 12</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fast and reliable iPhone distribution service that exceeded my expectations!
+                    Happy customer, everything was in order similar to a normal iphone store purchase
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -289,12 +289,12 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Client 4</h3>
-                <h4>Bought iphone13</h4>
+                <img src="assets/img/testimonials/testimonials-5.jpeg" class="testimonial-img" alt="">
+                <h3>Itumeleng</h3>
+                <h4>Bought an iPhone 13 Pro</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fast and reliable iPhone distribution service that exceeded my expectations!
+                   I have to give props to this iConnect-Distro for hooking me up with the iPhone 13. Professional customer service and super-fast delivery.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -302,12 +302,12 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>Client 5</h3>
-                <h4>Bought iphone14</h4>
+                <img src="assets/img/testimonials/testimonials-3.jpeg" class="testimonial-img" alt="">
+                <h3>Lwando</h3>
+                <h4>Bought an iPhone XR64</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fast and reliable iPhone distribution service that exceeded my expectations!
+                    Very quick, got my phone within a week and paid on delivery :)  
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -799,7 +799,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Get the Latest offers</h4>
-            <p>Enter contact details below to recievie the latest offer</p>
+            <p>Enter contact details below to recieve the latest offer</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
