--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iConnect-Distro Bootstrap Template - Index</title>
+  <title>iConnect-Distro</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -936,7 +936,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iConnect-Distro-free-multi-purpose-html-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">Intelli Analytix</a>
+        Designed by <a href="">Intelli Analytix</a>
       </div>
     </div>
   </footer><!-- End Footer -->
