Contact Form update

--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
         </div>
 
         <div class="col-lg-6 mt-4 mt-lg-0">
-          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <form action="https://formsubmit.co/zluvuno@gmail.com" method="POST" role="form" class="php-email-form">
             <div class="row">
               <div class="col-md-6 form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -848,15 +848,20 @@
               </div>
             </div>
             <div class="form-group mt-3">
-              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+              <input type="text" class="form-control" name="_subject" placeholder="Subject" required>
+              <input type="hidden" name="_autoresponse" value="Thank you for contacting iConnect-Distro we will get back to you as soon as possible">
+              <input type="hidden" name="_next" value="">
             </div>
             <div class="form-group mt-3">
-              <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+              <textarea type="text" class="form-control" name="message" rows="5" placeholder="Message" required></textarea> 
+              <!-- <input type="text" class="form-control" name="message" rows="5" placeholder="Message" required> -->
+              
+              
             </div>
             <div class="my-3">
               <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
+              <!-- <div class="error-message"></div>
+              <div class="sent-message">Your message has been sent. Thank you!</div> -->
             </div>
             <div class="text-center"><button type="submit">Send Message</button></div>
           </form>
