--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
         </div>
 
         <div class="col-lg-6 mt-4 mt-lg-0">
-          <form action="https://formsubmit.co/zluvuno@gmail.com" method="POST" role="form" class="php-email-form">
+          <form action="https://formsubmit.co/zluvuno@gmail.com" method="POST" class="php-email-form">
             <div class="row">
               <div class="col-md-6 form-group">
                 <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
