--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Get the Latest offers</h4>
             <p>Enter contact details below to recieve the latest offer</p>
-            <form action="" method="post">
+            <form action="https://formsubmit.co/iconnect-distro@outlook.com" method="POST" class="email-form">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
