Link  to thank_you page

--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
             <div class="form-group mt-3">
               <input type="hidden" class="form-control" name="_subject" value="iConnect-Distro Website - Product Query" required>
               <input type="hidden" name="_autoresponse" value="Thank you for contacting iConnect-Distro, a iConnect-Distro team member will reach out to you soon">
-              <input type="hidden" name="_next" value="https://i-connect-distro.vercel.app/thank_you">
+              <input type="hidden" name="_next" value="https://i-connect-distro.vercel.app/thank_you.html">
               <input type="hidden" name="_captcha" value="false">
               <input type="hidden" name="_template" value="box">
             </div>
