Footer links update

--- a/thank_you.html
+++ b/thank_you.html
@@ -82,7 +82,7 @@
   <section id="hero">
     <div class="hero-container" data-aos="fade-up" data-aos-delay="150">
       <h1>Thank You!</h1>
-      <h2>Comment Submitted <span style="color:rgb(255, 247, 0)"> Successfully.</span> </h2>
+      <h2>Comment Submitted <span style="color:rgb(255, 247, 0)"> Successfully</span> </h2>
       <h2>A iConnect-Distro team member will reach out to you as soon as possible</h2>
       <div class="d-flex">
         <a href="index.html#portfolio" class="btn-get-started scrollto">Continue Shopping</a>
@@ -117,10 +117,10 @@
               <div class="col-lg-2 col-md-6 footer-links">
                 <h4>Useful Links</h4>
                 <ul>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#about">About us</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Product</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#team">Team</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="index.html#">Home</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">About us</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="index.html#portfolio">Product</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="index.html#team">Team</a></li>
                 </ul>
               </div>
     
