--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">View Our Products</a></li>
+          <li><a class="getstarted scrollto" href="#portfolio">View Our Products</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
