--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
             <div class="member">
               <div class="pic"><img src="assets/img/team/forbez.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Mfobe Ntinelo</h4>
+                <h4>Mfobe Ntintelo</h4>
                 <span>Contact Avenues</span>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
@@ -674,7 +674,6 @@
             </div>
           </div>
         </center>
-
           
         </div>
 
@@ -885,7 +884,7 @@
               <h3>iConnect-Distro</h3>
               <p>90th Rivonia Sandton City, Johannesburg, 9010<br>
                 South Africa<br><br>
-                <strong>Phone:</strong> 081 756 5243<br>
+                <strong>Phone:</strong>081 756 5243<br>
                 <strong>Email:</strong> iconnect-distro@outlook.com<br>
               </p>
               <div class="social-links mt-3">
