--- a/thank_you.html
+++ b/thank_you.html
@@ -102,7 +102,7 @@
                   <p>90th Rivonia Sandton City, Johannesburg, 9010<br>
                     South Africa<br><br>
                     <strong>Phone:</strong> 081 756 5243<br>
-                    <strong>Email:</strong> Mfobekosi@outlook.com<br>
+                    <strong>Email:</strong> iconnect-distro@outlook.com<br>
                   </p>
                   <div class="social-links mt-3">
                     <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
