--- a/index.html
+++ b/index.html
@@ -79,16 +79,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero">
-    <div class="hero-container" data-aos="fade-up" data-aos-delay="150">
-      <h1>We Connect You</h1>
-      <h2>Our Vast Distribution Network Gets You The Best Deals</h2>
-      <div class="d-flex">
-        <a href="#portfolio" class="btn-get-started scrollto">View Our Products</a>
-        <a href="https://www.youtube.com/watch?v=FT3ODSg1GFE" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
-      </div>
-    </div>
-  </section><!-- End Hero -->
+
 
   <main id="main">
 
@@ -103,7 +94,7 @@
               <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
                 <div class="count-box">
                   <i class="bi bi-emoji-smile"></i>
-                  <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
+                  <span data-purecounter-start="0" data-purecounter-end="42" data-purecounter-duration="1" class="purecounter"></span>
                   <p>Happy Clients</p>
                 </div>
               </div>
@@ -706,12 +697,13 @@
                     <h3 class="accordion-header">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
                         <span class="num">1.</span>
-                          Where do you source your iPhones from?
+                         How Does Payment/Ordering Work
                       </button>
                     </h3>
                     <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                       <div class="accordion-body">
-                        We source our iPhones directly from authorized distributors and retailers. Rest assured, we only provide genuine products.
+                        Currently, if a client is interested in a product , they can contact us by commenting on the site or contacting us directly.
+                        Once communication has
                       </div>
                     </div>
                   </div><!-- # Faq item-->
@@ -948,13 +940,7 @@
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
   <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
   <!-- Template Main JS File -->
