--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up"">
+      <div class="container" data-aos="fade-up">
 
     <div class=" section-title">
         <h2>Contact</h2>
@@ -829,7 +829,7 @@
               <div class="info-box mt-4">
                 <i class="bx bx-phone-call"></i>
                 <h3>Call Us</h3>
-                <p>081 756 5243</p>
+                <p>067 013 7413</p>
               </div>
             </div>
           </div>
